--- a/src/full.liquid
+++ b/src/full.liquid
@@ -1,1 +1,21 @@
-full!
+<table class="table" data-table-limit="true">
+        <thead>
+          <tr>
+            <th><span class="title">Hour</span></th>
+            <th><span class="title">Electricity</span></th>
+            <th><span class="title">Gas</span></th>
+          </tr>
+        </thead>
+        <tbody>
+  {% assign now = "now" | date: "%Y-%m-%dT%H:00:00.000Z" %}
+  {% for item in electricity %}
+    {% if item.from >= now %}
+      <tr>
+        <td><span class="label label--small">{{ item.till | date: "%H:%M" }}</span></td>
+        <td><span class="label">{{ item.total_price | round: 2 }}</span></td>
+        <td><span class="label">{{ gas[forloop.index0].total_price | round: 2 }}</span></td>
+      </tr>
+    {% endif %}
+  {% endfor %}
+        </tbody>
+      </table>
