--- a/src/full.liquid
+++ b/src/full.liquid
@@ -10,9 +10,15 @@
         <table class="table" data-table-limit="true">
           <thead>
             <tr>
-              <th><span class="title">Hour</span></th>
-              <th><span class="title">Electricity</span></th>
-              <th><span class="title">Gas</span></th>
+              <th>
+                <span class="title">Hour</span>
+              </th>
+              <th>
+                <span class="title">Electricity</span>
+              </th>
+              <th>
+                <span class="title">Gas</span>
+              </th>
             </tr>
           </thead>
           <tbody>
@@ -20,9 +26,15 @@
             {% for item in electricity %}
               {% if item.from >= now %}
                 <tr>
-                  <td><span class="label label--small">{{ item.till | date: "%H:%M" }}</span></td>
-                  <td><span class="label">{{ item.total_price | round: 2 }}</span></td>
-                  <td><span class="label">{{ gas[forloop.index0].total_price | round: 2 }}</span></td>
+                  <td>
+                    <span class="label label--small">{{ item.till | date: "%H:%M" }}</span>
+                  </td>
+                  <td>
+                    <span class="label">{{ item.total_price | round: 2 }}</span>
+                  </td>
+                  <td>
+                    <span class="label">{{ gas[forloop.index0].total_price | round: 2 }}</span>
+                  </td>
                 </tr>
               {% endif %}
             {% endfor %}
