Fix: place title_bar after .screen/.view to act as footer (prevent overflow)

--- a/src/full.liquid
+++ b/src/full.liquid
@@ -114,7 +114,7 @@
             Highcharts.chart("energy-chart", {
               chart: {
                 type: "spline",
-                height: 150,
+                height: 200,
                 width: null,
                 animation: false,
                 spacing: [10, 10, 5, 10]
@@ -173,13 +173,12 @@
             });
           </script>
         </div>
-
-        <div class="title_bar">
-          <img class="image" src="https://usetrmnl.com/images/plugins/weather/wi-lightning.svg" />
-          <span class="title">Frank Energie</span>
-          <span class="instance">Energy Prices Chart</span>
-        </div>
       </div>
+    </div>
+    <div class="title_bar">
+      <img class="image" src="https://usetrmnl.com/images/plugins/weather/wi-lightning.svg">
+      <span class="title">Frank Energie</span>
+      <span class="instance">Energy Prices Chart</span>
     </div>
   </body>
 </html>
