--- a/src/full.liquid
+++ b/src/full.liquid
@@ -11,7 +11,7 @@
   <body class="environment trmnl">
     <div class="screen">
       <div class="view view--full">
-        <div class="layout layout--col gap--space-between">
+        <div class="layout layout--col" style="height: calc(100vh - 50px); display: flex; flex-direction: column;">
           <!-- Metrics section: Adapt to show energy stats -->
           <div class="grid">
             <div class="row">
@@ -85,7 +85,10 @@
           </div>
 
           <!-- Chart container -->
-          <div id="energy-chart" class="w--full"></div>
+          <div
+            id="energy-chart"
+            class="w--full"
+            style="flex-grow: 1; min-height: 0;"></div>
 
           <script type="text/javascript">
             // Build dynamic data from Liquid variables
@@ -114,7 +117,7 @@
             Highcharts.chart("energy-chart", {
               chart: {
                 type: "spline",
-                height: 200,
+                height: null,
                 width: null,
                 animation: false,
                 spacing: [10, 10, 5, 10]
