Add templates for half-hor, half-ver, quadrant

--- a/src/half_horizontal.liquid
+++ b/src/half_horizontal.liquid
@@ -1,1 +1,77 @@
-half horizontal!
+<div class="layout layout--col gap--space-between">
+  <div class="grid h-full">
+    <div class="col--span-3 col gap--space-between">
+      <div class="grid grid--cols-2 gap--[9px]" data-adjust-grid-gaps="false">
+        <div class="item">
+          <div class="meta"></div>
+          <div class="content">
+            <span class="value value--tnums" data-value-type="number">$159,022</span>
+            <span class="label">Total Sales</span>
+          </div>
+        </div>
+        <div class="item">
+          <div class="meta"></div>
+          <div class="content">
+            <span class="value value--tnums" data-value-type="number">$156</span>
+            <span class="label">AOV</span>
+          </div>
+        </div>
+      </div>
+      <div class="divider"></div>
+      <div class="grid grid--cols-2">
+        <div class="item">
+          <div class="meta"></div>
+          <div class="content">
+            <span class="value value--xsmall value--tnums" data-value-type="number">763</span>
+            <span class="label">Pending Orders</span>
+          </div>
+        </div>
+        <div class="item">
+          <div class="meta"></div>
+          <div class="content">
+            <span class="value value--xsmall value--tnums" data-value-type="number">254</span>
+            <span class="label">Fulfilled Orders</span>
+          </div>
+        </div>
+      </div>
+      <div class="divider"></div>
+      <div class="grid grid grid--cols-2">
+        <div class="item">
+          <div class="meta"></div>
+          <div class="content">
+            <span class="value value--xxsmall value--tnums" data-value-type="date">
+              <div class="w--12 h--1.5 mb--2 bg--gray-5"></div>
+              Nov 01 - 
+                  Nov 30
+            </span>
+          </div>
+        </div>
+        <div class="item">
+          <div class="meta"></div>
+          <div class="content">
+            <span class="value value--xxsmall value--tnums" data-value-type="date">
+              <div class="w--12 h--1.5 mb--2 bg--black" style="border-radius: 20px;"></div>
+              Dec 01 - 
+                    Dec 31
+            </span>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="col--span-3 col gap--space-between">
+      <div id="chart-48a6eec5eebe" class="w--full"></div>
+      <script src="https://code.highcharts.com/12.3.0/highcharts.js"></script>
+      <script src="https://code.highcharts.com/12.3.0/highcharts-more.js"></script>
+      <script src="https://code.highcharts.com/12.3.0/modules/pattern-fill.js"></script>
+      <script type="text/javascript"></script>
+    </div>
+  </div>
+</div>
+<div class="title_bar">
+  <img
+    alt="Shopify Plugin Icon"
+    class="image"
+    src="https://trmnl.com/images/plugins/shopify--render.svg">
+  <span class="title">Shopify</span>
+  <span class="instance">trmnl.com</span>
+</div>
