Change label_avg to be in one line

--- a/src/quadrant.liquid
+++ b/src/quadrant.liquid
@@ -6,7 +6,7 @@
       {% render 'price_card'
         , data: electricity
         , label_now: "Price elec now"
-        , label_avg: "Avg elec"
+        , label_avg: "Elec today"
         , resource_name: "Electricity"
         , bar_color: "bg--black"
         , show_indicator: false
@@ -23,7 +23,7 @@
       {% render 'price_card'
         , data: gas
         , label_now: "Price gas now"
-        , label_avg: "Avg gas"
+        , label_avg: "Gas today"
         , resource_name: "Gas"
         , bar_color: "bg--gray-5"
         , show_indicator: false
